Add user table to mysql
